--- a/Expense Tracker/Views/Shared/_Layout.cshtml
+++ b/Expense Tracker/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <div>
                     <i class="fa-solid fa-bell"></i>
                     <i class="fa-solid fa-message"></i>
-                    <img class="profile-pic" src="~/USE.jpg" />
+                    <img class="profile-pic" src="~/user.png" />
                 </div>
             </div>
         </nav>
