--- a/Expense Tracker/Views/Category/AddOrEdit.cshtml
+++ b/Expense Tracker/Views/Category/AddOrEdit.cshtml
@@ -2,48 +2,54 @@
 
 @{
     ViewData["PageTitle"] = Model.CategoryId == 0 ? "Create a new category" : "Edit category";
+    // Set page title based on whether it's a new or existing category
 }
-
 
 <div class="row">
     <div class="col-md-7">
         <div class="widget p-5" style="background-color:white">
             <form asp-action="AddOrEdit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <!-- Hidden field to store CategoryId -->
                 <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
+
+                <!-- Radio buttons for category type -->
                 <div class="mb-3">
                     <div class='e-btn-group custom-rbt-group'>
-                        <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type=="Expense")" />
+                        <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type == "Expense")" />
                         <label class="e-btn" for="radioleft">Expense</label>
-                        <input type="radio" id="radiomiddle1" name="Type" value="Income" checked="@(Model.Type=="Income")" />
+                        <input type="radio" id="radiomiddle1" name="Type" value="Income" checked="@(Model.Type == "Income")" />
                         <label class="e-btn" for="radiomiddle1">Income</label>
-                        
                     </div>
                 </div>
 
+                <!-- Textbox for category title -->
                 <div class="mb-3">
                     <ejs-textbox id="title" placeholder="Title" ejs-for="Title" floatLabelType="Always"></ejs-textbox>
                     <span asp-validation-for="Title" class="text-danger fs-6"></span>
                 </div>
+
+                <!-- Textbox for category icon -->
                 <div class="mb-3">
                     <ejs-textbox id="icon" placeholder="Icon" ejs-for="Icon" floatLabelType="Always"></ejs-textbox>
                 </div>
+
+                <!-- Submit button -->
                 <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
             </form>
         </div>
-
-
     </div>
     <div class="col-md-5">
         <div class="widget h-100 d-flex justify-content-center align-items-center">
             <i class="fa-solid fa-shapes fa-2xl"></i>
+            <!-- Display icon -->
         </div>
     </div>
 </div>
-
 
 @*@section Scripts {
     @{
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 }*@
+// Uncomment this section to include validation scripts
