--- a/Expense Tracker/Views/Category/AddOrEdit.cshtml
+++ b/Expense Tracker/Views/Category/AddOrEdit.cshtml
@@ -1,49 +1,62 @@
 ﻿@model Expense_Tracker.Models.Category
 
 @{
+    // Set the page title based on whether we're creating a new category or editing an existing one
     ViewData["PageTitle"] = Model.CategoryId == 0 ? "Create a new category" : "Edit category";
 }
-
 
 <div class="row">
     <div class="col-md-7">
         <div class="widget p-5" style="background-color:white">
+            <!-- Form for creating or editing a category -->
             <form asp-action="AddOrEdit">
+                <!-- Display validation summary for model-level errors -->
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <!-- Hidden input to store the CategoryId -->
                 <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
+
                 <div class="mb-3">
+                    <!-- Radio buttons for selecting the category type -->
                     <div class='e-btn-group custom-rbt-group'>
+                        <!-- Radio button for 'Expense' type -->
                         <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type=="Expense")" />
                         <label class="e-btn" for="radioleft">Expense</label>
+
+                        <!-- Radio button for 'Income' type -->
                         <input type="radio" id="radiomiddle1" name="Type" value="Income" checked="@(Model.Type=="Income")" />
                         <label class="e-btn" for="radiomiddle1">Income</label>
-                        
                     </div>
                 </div>
 
                 <div class="mb-3">
+                    <!-- Textbox for entering the category title -->
                     <ejs-textbox id="title" placeholder="Title" ejs-for="Title" floatLabelType="Always"></ejs-textbox>
                     <span asp-validation-for="Title" class="text-danger fs-6"></span>
                 </div>
+
                 <div class="mb-3">
+                    <!-- Textbox for entering the category icon -->
                     <ejs-textbox id="icon" placeholder="Icon" ejs-for="Icon" floatLabelType="Always"></ejs-textbox>
                 </div>
+
+                <!-- Submit button to submit the form -->
                 <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
             </form>
         </div>
-
-
     </div>
+
     <div class="col-md-5">
         <div class="widget h-100 d-flex justify-content-center align-items-center">
+            <!-- Placeholder for an icon or graphic -->
             <i class="fa-solid fa-shapes fa-2xl"></i>
         </div>
     </div>
 </div>
 
-
 @*@section Scripts {
     @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+        // Include validation scripts if needed
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }*@
