--- a/Expense Tracker/Views/Shared/_SideBar.cshtml
+++ b/Expense Tracker/Views/Shared/_SideBar.cshtml
@@ -2,8 +2,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    // Define the menu items for the sidebar
     List<Object> menuItems = new List<Object>();
 
+    // Add menu items with separators and icons
     menuItems.Add(new
     {
         text = "General",
@@ -38,7 +40,8 @@
         text = "Reports",
         iconCss = "fa-solid fa-chart-simple",
         url = "#"
-    }); menuItems.Add(new
+    });
+    menuItems.Add(new
     {
         text = "Settings",
         iconCss = "fa-solid fa-gear",
@@ -46,19 +49,20 @@
     });
 }
 
-
+<!-- Sidebar component -->
 <ejs-sidebar id="sidebar" width="290px" enableDock dockSize="100px"
-            target=".dock-target" enableGestures="false">
+             target=".dock-target" enableGestures="false">
     <e-content-template>
-
+        <!-- Logo and toggle button -->
         <div class="logo-wrapper">
             <div class="app-logo">
                 <img src="~/logo.png" />
             </div>
             <div class="w-100"></div>
-            <i id="sidebar-toggler" class="fa-solid"></i>
+            <i id="sidebar-toggler" class="fa-solid"></i> <!-- Toggle button for sidebar -->
         </div>
 
+        <!-- User profile section -->
         <div class="profile-wrapper">
             <img class="profile-pic" src="~/user.png" />
             <div class="titles d-flex flex-column ps-3">
@@ -67,6 +71,7 @@
             </div>
         </div>
 
+        <!-- Menu component -->
         <ejs-menu id="menu"
                   items="menuItems"
                   orientation="Vertical"
@@ -74,12 +79,14 @@
     </e-content-template>
 </ejs-sidebar>
 
+<!-- Script to handle sidebar toggling -->
 <script>
-    document.addEventListener('DOMContentLoaded',function (){
+    document.addEventListener('DOMContentLoaded', function () {
+        // Get the sidebar instance
         dockBar = document.getElementById('sidebar').ej2_instances[0];
+        // Set up the toggle functionality
         document.getElementById('sidebar-toggler').onclick = function () {
             dockBar.toggle();
         };
     });
-
 </script>
