--- a/Expense Tracker/Views/Transaction/AddOrEdit.cshtml
+++ b/Expense Tracker/Views/Transaction/AddOrEdit.cshtml
@@ -7,14 +7,21 @@
 <div class="row">
     <div class="col-md-7">
         <div class="widget p-5" style="background-color:white">
+            <!-- Form for adding or editing a transaction -->
             <form asp-action="AddOrEdit">
+                <!-- Display validation errors -->
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <!-- Hidden field for TransactionId -->
                 <input type="hidden" name="TransactionId" value="@Model.TransactionId" />
+
+                <!-- Date Picker -->
                 <div class="mb-3">
                     <ejs-datepicker id="date" ejs-for="Date"
                                     placeholder="Date" floatLabelType="Always"
                                     format="MMM-dd-yy"></ejs-datepicker>
                 </div>
+
+                <!-- Category Dropdown -->
                 <div class="mb-3">
                     <ejs-dropdownlist id="ddlCategory" ejs-for="CategoryId"
                                       dataSource="@ViewBag.Categories" placeholder="Category"
@@ -24,22 +31,29 @@
                     </ejs-dropdownlist>
                     <span asp-validation-for="CategoryId" class="text-danger fs-6"></span>
                 </div>
+
+                <!-- Amount Numeric Textbox -->
                 <div class="mb-3">
                     <ejs-numerictextbox id="amount" ejs-for="Amount"
                                         placeholder="Amount" floatLabelType="Always"
-                                        min=0 format="c0" ></ejs-numerictextbox>
+                                        min=0 format="₹0"></ejs-numerictextbox>
                     <span asp-validation-for="Amount" class="text-danger fs-6"></span>
                 </div>
+
+                <!-- Note Textbox -->
                 <div class="mb-3">
                     <ejs-textbox id="note" placeholder="Note" ejs-for="Note"
                                  floatLabelType="Always" multiline="true"></ejs-textbox>
                 </div>
+
+                <!-- Submit Button -->
                 <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
             </form>
         </div>
     </div>
     <div class="col-md-5">
         <div class="widget h-100 d-flex justify-content-center align-items-center">
+            <!-- Icon representing financial transactions -->
             <i class="fa-solid fa-money-bill-transfer fa-2xl"></i>
         </div>
     </div>
