--- a/Expense Tracker/Views/Shared/_Layout.cshtml
+++ b/Expense Tracker/Views/Shared/_Layout.cshtml
@@ -41,15 +41,7 @@
                 <div>
                     <i class="fa-solid fa-bell"></i>
                     <i class="fa-solid fa-message"></i>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <img class="profile-pic" src="~/user.png" />
-=======
-                 @*    <img class="profile-pic" src="~/USE.jpg" /> *@
->>>>>>> d24595d (Added Comments in UI)
-=======
-                 @*    <img class="profile-pic" src="~/USE.jpg" /> *@
->>>>>>> bce3d9b1d32ceb37dee25725879f47e197d49e8c
+                 @*    <img class="profile-pic" src="~/user.png" /> *@
                 </div>
             </div>
         </nav>
