--- a/Expense Tracker/Views/Dashboard/Index.cshtml
+++ b/Expense Tracker/Views/Dashboard/Index.cshtml
@@ -6,6 +6,11 @@
     ViewData["isDashboard"] = true;
 }
 
+<div class="row mb-4">
+    <!-- Title of the app  -->
+    <div class="display-6 fw-bold">Expense Tracker </div>
+    
+    </div>
 @* Summary Widgets *@
 <div class="row mb-4">
     <!-- Total Income Widget -->
