--- a/Expense Tracker/Views/Shared/_SideBar.cshtml
+++ b/Expense Tracker/Views/Shared/_SideBar.cshtml
@@ -66,7 +66,7 @@
         <div class="profile-wrapper">
             <img class="profile-pic" src="~/user.png" />
             <div class="titles d-flex flex-column ps-3">
-                <h6 class="mb-0">Wallet App</h6>
+                @* <h6 class="mb-0">Wallet App</h6> *@
                 <span class="text-muted">Imdadul Rehmaan</span>
             </div>
         </div>
